fix: full width and center alignment of video block (#941)

--- a/src/theme/ItaliaTheme/Blocks/_video.scss
+++ b/src/theme/ItaliaTheme/Blocks/_video.scss
@@ -1,46 +1,74 @@
 .block.video {
-  .ui.embed {
-    position: relative;
+  .video-inner {
+    > div {
+      position: relative;
+      overflow: hidden;
+      max-width: 100%;
+      height: 0;
+      padding-bottom: 56.25%;
+
+      .icon-play {
+        position: absolute;
+        z-index: 2;
+        top: 50%;
+        left: 50%;
+        width: 4rem;
+        height: 2.6rem;
+        border-radius: 15px;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: $white;
+        cursor: pointer;
+        line-height: 2.6rem;
+        text-align: center;
+        transform: translateX(-50%) translateY(-50%);
+      }
+    }
+
+    .ui.embed.active {
+      .icon-play,
+      img.placeholder {
+        display: none;
+      }
+    }
 
     img.placeholder {
       position: absolute;
       top: 50%;
       left: 0;
       width: 100%;
+      min-width: 100%;
+      height: unset;
+      min-height: 100%;
+      object-fit: cover;
       transform: translateY(-50%);
     }
+  }
 
-    .icon-play {
-      position: absolute;
-      z-index: 2;
-      top: 50%;
-      left: 50%;
-      width: 4rem;
-      height: 2.6rem;
-      border-radius: 15px;
-      background-color: rgba(0, 0, 0, 0.7);
-      color: $white;
-      cursor: pointer;
-      line-height: 2.6rem;
-      text-align: center;
-      transform: translateX(-50%) translateY(-50%);
+  .ui.embed img.placeholder {
+    cursor: pointer;
+  }
 
-      svg {
-        width: 1.2rem;
-        height: 1.2rem;
-      }
-
-      &:hover,
-      &:active,
-      &:focus {
-        background-color: $primary;
-        color: $primary-text;
-      }
+  &.full {
+    .video-inner.full-width > div {
+      height: 100%;
+      padding-bottom: 0;
     }
+  }
 
-    &.active {
-      .icon-play {
-        display: none;
+  @media (max-width: #{map-get($grid-breakpoints, md)}) {
+    &.align.right,
+    &.align.left {
+      .video-inner {
+        width: 100%;
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+        float: unset;
+      }
+
+      img {
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+        float: unset;
       }
     }
   }
